--- a/package.json
+++ b/package.json
@@ -1,10 +1,8 @@
 {
-	"name": "gitapitask",
+	"name": "issuesapitask",
 	"version": "0.1.0",
 	"private": true,
 	"dependencies": {
-		"@emotion/react": "^11.10.6",
-		"@emotion/styled": "^11.10.6",
 		"@reduxjs/toolkit": "^1.9.3",
 		"@testing-library/jest-dom": "^5.16.5",
 		"@testing-library/react": "^13.4.0",
@@ -13,14 +11,15 @@
 		"react": "^18.2.0",
 		"react-dom": "^18.2.0",
 		"react-icons": "^4.8.0",
-		"react-markdown": "^8.0.5",
 		"react-redux": "^8.0.5",
 		"react-router-dom": "^6.9.0",
 		"react-scripts": "5.0.1",
-		"remark-gfm": "^3.0.1",
+		"redux": "^4.2.1",
+		"styled-components": "^5.3.9",
 		"web-vitals": "^2.1.4"
 	},
 	"scripts": {
+		"postinstall": "husky install",
 		"start": "react-scripts start",
 		"build": "react-scripts build",
 		"test": "react-scripts test",
@@ -48,11 +47,14 @@
 		]
 	},
 	"devDependencies": {
+		"@babel/eslint-parser": "^7.21.3",
 		"eslint": "^8.36.0",
 		"eslint-plugin-prettier": "^4.2.1",
 		"eslint-plugin-react": "^7.32.2",
 		"eslint-plugin-unused-imports": "^2.0.0",
+		"husky": "^8.0.3",
 		"prettier": "^2.8.4",
+		"redux-devtools-extension": "^2.13.9",
 		"redux-logger": "^3.0.6"
 	}
 }
